Add GraphQL status
- Add GraphQL status; show an optional indicator in the nav to help debug issues and show loading activity (hidden by default)
- Use forked `react-apollo-network-status` to track status across subgraphs
- Create browser-settings library
- Move dark mode to browser-settings
- Fix: ThemeProvider should not be mounted twice!

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -52,6 +52,7 @@
       "@apps/base/utils": ["libs/base/src/lib/utils/index.ts"],
       "@apps/bigdecimal": ["libs/bigdecimal/src/index.ts"],
       "@apps/boost": ["libs/boost/src/index.ts"],
+      "@apps/browser-settings": ["libs/browser-settings/src/lib/index.ts"],
       "@apps/context-utils": ["libs/context-utils/src/lib/index.ts"],
       "@apps/data-provider": ["libs/data-provider/src/index.ts"],
       "@apps/dumb-components": ["libs/dumb-components/src/lib/index.ts"],
